fix the jump on load and improve footer and header positioning

--- a/variations/noto/scss/_branding.scss
+++ b/variations/noto/scss/_branding.scss
@@ -11,7 +11,7 @@ $header-vertical-position-top: 25px;
     // Vertical Layout
     body:not(.page):not(.single) & {
         transform: translateY(0px) rotate(1deg);
-        transition: all $transition--macro ease;
+        transition: transform $transition--macro ease;
 
         &:hover {
             transform: translateY(-30px) rotate(-1deg);
@@ -20,7 +20,8 @@ $header-vertical-position-top: 25px;
 
     // Single and Pages
     // Horizontal Layout
-    .page &, .single & {
+    .page &,
+    .single & {
 
         .c-branding {
             transition: $transition--default;
@@ -32,9 +33,11 @@ $header-vertical-position-top: 25px;
         }
 
         &:hover {
+
             .c-branding {
                 transform: translateY(-$header-horizontal-position-top/3*2);
             }
+
             .profile-photo {
                 transform: scale(0.92) rotate(2deg);
             }
